# defect-detection-jetson

./: .gitignore  Dockerfile  Dockerfile.jetson  JETSON_DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: jetson-deploy.yml
data/kolektorsdd/: data.yaml
data/kolektorsdd/labels/: train.cache  val.cache
defect_detection/: __init__.py  app.py  data_utils.py  db.py  inference.py  server.py  train.py
defect_detection/static/: README.txt
runs/detect/data/kolektorsdd/runs/defect_detection/: args.yaml
runs/detect/data/kolektorsdd/runs/defect_detection-2/: args.yaml  results.csv
tests/: test_dashboard_inference.py  test_dataset_utils.py  test_inference.py  test_model_serving.py  test_training_config.py  test_training_script.py
